<?xml version="1.0" encoding="utf-8"?><!--

    Copyright (c) 2015-2017 TomTom N.V. All rights reserved.

    This software is the proprietary copyright of TomTom N.V. and its subsidiaries and may be used
    for internal evaluation purposes or commercial use strictly subject to separate licensee
    agreement between you and TomTom. If you are the licensee, you are only permitted to use
    this Software in accordance with the terms of your license agreement. If you are not the
    licensee then you are not authorised to use this software in any manner and should
    immediately return it to TomTom N.V.

-->

<resources>
    <string name="app_name">EV Launcher<!--Maps SDK Examples--></string>

    <string name="hello">Hello World, LogTool!</string>
    <string name="newyork_city_name">Newyork</string>

    <string name="haarlem_destination_address">Haarlem</string>
    <string name="amsterdam_to_haarlem_desc">Amsterdam to Haarlem</string>

    <string name="near_me_search">Near me</string>
    <string name="global_search">Global</string>
    <string name="search_activity_hint">Search</string>
    <string name="search_failed_toast">Search failed&#8230;</string>
    <string name="search_distance_calculating">Calculating&#8230;</string>

    <string name="balloon_tomtom_hq">TomTom HQ</string>
    <string name="balloon_default_text">Welcome to TomTom</string>


    <string name="map_ui_extensions_title">Map UI <!--extensions--></string>

    <string name="dialog_routing_in_progress_msg">Routing in progress...</string>

    <string name="msg_error_general_route_processing">An error occurred during the route planning processing: %1$s.</string>

    <string name="btn_text_gas_stations">Gas stations</string>
    <string name="btn_text_ev_stations">EV stations</string>
    <string name="chevron_tracking">Chevron tracking</string>
    <string name="chevron_tracking_subtitle">Camera follows the chevron</string>
    <string name="chevron_tracking_start">Start tracking</string>
    <string name="chevron_tracking_stop">Stop tracking</string>
    <string name="matching_description">Red circle shows raw GPS position</string>

    <string name="date_not_available">N/A</string>

    <string name="report_service_title">Report service</string>
    <string name="report_service_subtitle">Drag a pin inside/outside of a fence</string>
    <string name="btn_one_fence">One fence</string>
    <string name="btn_two_fences">Two fences</string>
    <string name="report_service_request_error">Request could not be completed</string>
    <string name="report_service_only_inside_fences">The location is \ninside of fences: %1$s</string>
    <string name="report_service_only_outside_fences">The location is \noutside of fences: %1$s</string>
    <string name="report_service_both_types_of_fences">The location is \ninside of fences: %1$s \noutside of fences: %2$s</string>
    <string name="report_service_fence_marker_balloon">This is the closest location to \n%1$s border</string>
    <string name="search_along_route_title">Search along the route</string>
	
	<!-- <string name="app_name">NavigationApp</string> -->

    <string name="km_per_hour">km/h</string>
    <string name="miles_per_hour">mph</string>

    <!-- Next instruction panels -->
    <string name="next_instruction_panel_exit_shield_label">EXIT</string>
    <string name="combined_instruction_panel_label">Then</string>

    <string name="navigation_route_marker_waypoint_icon_path">asset:icons@/route-markers/ic_map_3d_waypoint_top_start.png</string>
    <string name="navigation_route_marker_pin_path">asset:icons@/route-markers/ic_map_poi_pin_base.png</string>
    <string name="navigation_route_marker_shield_path">asset:icons@/route-markers/ic_map_poi_pin_white_disk_base.png</string>
    <string name="navigation_route_marker_destination_icon_path">asset:icons@/route-markers/ic_map_destination.png</string>
    <string name="navigation_experience_destination_reached_message">You have arrived</string>
    <string name="navigation_experience_select_route_message">Select a route to start navigation</string>
    <string name="navigation_experience_route_planning_error">Unable to plan route</string>

    <string name="navigation_experience_deviated_from_route">Deviated from route %d meters from start.</string>

    <string name="avoid_category">Avoids</string>
    <string name="avoid_borders_pref">Border Crossings</string>
    <string name="avoid_borders_pref_summary">Attempts to minimize the number of country border crossings</string>
    <string name="avoid_ferry_pref">Ferries</string>
    <string name="avoid_ferry_pref_summary">Attempts to minimize ferries(boat or car-train) on a route</string>
    <string name="avoid_motorways_pref">Motorways</string>
    <string name="avoid_motorways_pref_summary">Attempts to minimize motorways on a route</string>
    <string name="avoid_tolls_pref">Tolls</string>
    <string name="avoid_tolls_pref_summary">Attempts to minimize roads that collect a toll on a route</string>
    <string name="avoid_unpaved_pref">Unpaved</string>
    <string name="avoid_unpaved_pref_summary">Attempts to minimize roads that are unpaved on a route</string>
    <string name="avoid_carpools_pref">Carpools</string>
    <string name="avoid_carpools_pref_summary">Attempts to minimize carpool roads on a route</string>
    <string name="planning_category">Planning Criteria</string>
    <string name="avoid_alternatives_pref">Number of Alternatives</string>
    <string name="avoid_alternatives_default">0</string>

    <string-array name="alternatves_entries">
        <item>"None"</item>
        <item>"One"</item>
        <item>"Two"</item>
        <item>"Three"</item>
        <item>"Four"</item>
        <item>"Five"</item>
    </string-array>
    <string-array name="alternatves_values">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>

    <!--Jerry@0308 add !-->
    <string name="poi_search_position_marker_path">asset:icons@/route-markers/ic_poi_position.png</string>
    <string name="atm_poi_search_position_marker_path">asset:icons@/route-markers/poi_atm.png</string>
    <string name="cafe_poi_search_position_marker_path">asset:icons@/route-markers/poi_cafe.png</string>
    <string name="charging_station_poi_search_position_marker_path">asset:icons@/route-markers/poi_charging_station.png</string>
    <string name="gas_station_poi_search_position_marker_path">asset:icons@/route-markers/poi_gas_station.png</string>
    <string name="hospital_poi_search_position_marker_path">asset:icons@/route-markers/poi_hospital.png</string>
    <string name="hotel_poi_search_position_marker_path">asset:icons@/route-markers/poi_hotel.png</string>
    <string name="parking_poi_search_position_marker_path">asset:icons@/route-markers/poi_parking.png</string>
    <string name="restaurant_poi_search_position_marker_path">asset:icons@/route-markers/poi_restaurant.png</string>
    <string name="school_poi_search_position_marker_path">asset:icons@/route-markers/poi_school.png</string>
    <string name="supermarket_poi_search_position_marker_path">asset:icons@/route-markers/poi_supermarket.png</string>
    <string name="unknown_poi_search_position_marker_path">asset:icons@/route-markers/poi_unknown.png</string>
    <string name="font_style">asset://simkai.ttf</string>
    <string name="nip_instruction_end_route">End Route</string>
    <string name="nip_instruction_remaining"> ・ %d hr %d min ・ </string>
    <string name="nip_instruction_remaining_min"> ・ %d min ・ </string>
	
	<!--metis@0309 add !-->
	<string name="search_marker_pin_path">asset:icons@/route-markers/icon_pin.png</string>

    <!--Jerry@20220426 add:route avoid !-->
    <string name="toll_avoid_text">Tolls</string>
    <string name="highways_avoid_text">Highways</string>
    <string name="ferries_avoid_text">Ferries</string>
    <string name="unpaved_avoid_text">Unpaved \n roads</string>

</resources>
