<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright (C) 2018 TomTom NV. All rights reserved.

This software is the proprietary copyright of TomTom NV and its subsidiaries and may be
used for internal evaluation purposes or commercial use strictly subject to separate
license agreement between you and TomTom NV. If you are the licensee, you are only permitted
to use this software in accordance with the terms of your license agreement. If you are
not the licensee, you are not authorized to use this software in any manner and should
immediately return or destroy it.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/avoid_category">
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_borders"
            android:summary="@string/avoid_borders_pref_summary"
            android:title="@string/avoid_borders_pref" />
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_ferry"
            android:summary="@string/avoid_ferry_pref_summary"
            android:title="@string/avoid_ferry_pref" />
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_motorway"
            android:summary="@string/avoid_motorways_pref_summary"
            android:title="@string/avoid_motorways_pref" />
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_tolls"
            android:summary="@string/avoid_tolls_pref_summary"
            android:title="@string/avoid_tolls_pref" />
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_unpaved"
            android:summary="@string/avoid_unpaved_pref_summary"
            android:title="@string/avoid_unpaved_pref" />
        <SwitchPreference
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:key="pref_route_planning_carpools"
            android:summary="@string/avoid_carpools_pref_summary"
            android:title="@string/avoid_carpools_pref" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:title="@string/planning_category" >
        <ListPreference
            android:key="pref_route_planning_alternatives"
            android:title="@string/avoid_alternatives_pref"
            android:entries="@array/alternatves_entries"
            android:entryValues="@array/alternatves_values"
            android:defaultValue="@string/avoid_alternatives_default"
            android:persistent="true" />
    </PreferenceCategory>
</PreferenceScreen>